--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Convert JSON to CSV
-      run: python convert_json_to_csv.py
+      run: python json_to_csv.py
 
     - name: Commit and push changes
       uses: stefanzweifel/git-auto-commit-action@v4
