--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
       run: python json_to_csv.py
 
     - name: Commit and push changes
-      uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: "Convert JSON to CSV"
+      run: |
+         git config user.name "${{ github.actor }}"
+         git config user.email "${{ github.actor }}@users.noreply.github.com"
+         git add .
+         git commit -m "Convert JSON to Table"
+         git push
