--- a/.github/workflows/json_to_csv.yml
+++ b/.github/workflows/json_to_csv.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pandas
 
     - name: Convert JSON to CSV
       run: python json_to_csv.py
