--- a/.github/workflows/json_to_csv.yml
+++ b/.github/workflows/json_to_csv.yml
@@ -21,7 +21,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pandas
-
+        pip install pandas openpyxl  # Add openpyxl here
+        
     - name: Convert JSON to CSV
       run: python json_to_csv.py
 
